--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_ml_kit: ^0.12.0
+  google_ml_kit: ^0.13.0
   image: ^3.2.0
   camera: ^0.10.0+3
   tflite_flutter: ^0.9.0
@@ -45,9 +45,9 @@ dependencies:
   get_it: ^7.2.0
   font_awesome_flutter: ^10.2.1
   url_launcher: ^6.1.6
-  firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
   crypt: ^4.2.1
+  firebase_auth: ^4.1.3
 
 dev_dependencies:
   flutter_test:
