--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.students_kyc_app">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
         android:label="students_kyc_app"
         android:name="${applicationName}"
@@ -21,6 +23,8 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -32,8 +36,34 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBDOjOJB4-uVM2YssqKA0KNOwv8WSRxBd4"/>
+
          <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
     </application>
+
+       <queries>
+  <!-- If your app opens https URLs -->
+      <intent>
+       <action android:name="android.intent.action.VIEW" />
+       <data android:scheme="https" />
+      </intent>
+  <!-- If your app makes calls -->
+     <intent>
+       <action android:name="android.intent.action.DIAL" />
+      <data android:scheme="tel" />
+     </intent>
+  <!-- If your sends SMS messages -->
+     <intent>
+      <action android:name="android.intent.action.SENDTO" />
+      <data android:scheme="smsto" />
+     </intent>
+  <!-- If your app sends emails -->
+    <intent>
+      <action android:name="android.intent.action.SEND" />
+      <data android:mimeType="*/*" />
+    </intent>
+  </queries>
 </manifest>
