--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,14 @@ dependencies:
   cloud_firestore: ^4.1.0
   crypt: ^4.2.1
   firebase_auth: ^4.1.3
+  google_maps_flutter: ^2.2.1
+  geolocator: ^9.0.2
+  http: ^0.13.5
+  flutter_polyline_points: ^1.0.0
+  permission_handler: ^10.2.0
+  future_progress_dialog: ^0.2.0
+  fluttertoast: ^8.1.1
+  share_plus: ^4.5.3
 
 dev_dependencies:
   flutter_test:
